--- a/style/skills.css
+++ b/style/skills.css
@@ -58,15 +58,16 @@
 @media (max-width: 924px) {
     .item-wrapper {
         flex-wrap: wrap;
-        max-width: 60%;
         margin: 0 auto;
         gap: 80px 0;
+        justify-content: space-around;
     }
 }
 
 @media (max-width: 820px) {
     .item-wrapper {
-        gap: 80px;
+        gap: 100px;
+        justify-content: space-around;
         max-width: 90%;
     }
 }
