--- a/style/header.css
+++ b/style/header.css
@@ -1,105 +1,51 @@
-.nav {
-    border-bottom: 1px solid #828282;
-    padding: 32px 0;
+header {
+    padding: 41px 0 71px;
+    background-image: url("../images/title-back.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: #3A4F63;
+    color: #FFFFFF;
+    height: 100vh;
+}
+.header__logo {
+    margin: 0 auto;
+    max-width: 102px;
+}
+.header__logo img {
+    width: 100%;
+    height: auto;
+}
+.header__title {
+    font-family: Bebas Neue;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 72px;
+    letter-spacing: 5.7px;
+    text-align: center;
+    margin-top: 306px;
+}
+.header__subtitle {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+    text-align: center;
+    margin-bottom: 221px;
+}
+header a {
+    display: block;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 11px;
+    font-weight: 700;
+    line-height: 15px;
+    letter-spacing: 3.7px;
+
 }
 
-.nav__burger {
-    display: none;
-}
 
-.nav__list {
-    display: flex;
-    justify-content: space-between;
-}
 
-.nav__link {
-    font-family: 'Gilroy-Bold';
-    color: #828282;
-}
 
-.nav__link:hover {
-    color: #070707;
-    transition: .5s;
-}
 
-@media (max-width: 1024px) {
-    .nav {
-        display: none;
-    }
-    .nav__burger {
-        display: block;
-        position: fixed;
-        /* top: 68px;
-        right: 26px; */
-    }
-    .nav__burgerLink {
-        text-decoration: none;
-        font-family: 'Gilroy-Bold';
-        font-size: 34px;
-        line-height: 42px; 
-        color: #828282;
-        transition: 0.5s;
-    }
-    .nav__burgerLink:hover {
-        color: black;
-        transition: 0.5s;
-    }
-    .nav__burgerLine {
-        display: block;
-        width: 33px;
-        height: 4px;
-        background-color: black;
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        z-index: 5;
-        transition: 0.6s;
-    }
-    .nav__burgerLine:nth-child(2) {
-        top: 27px;
-    }
-    .nav__burgerLine:nth-child(3) {
-        top: 34px;
-    }
-    .nav__burgerCheck {
-        position: fixed;
-        top: 15px;
-        right: 16px;
-        z-index: 10;
-        width: 40px;
-        height: 30px;
-        opacity: 0;
-    }
-    .nav__burgerList {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 66px 0  0 26px;
-        background-color: white;
-        height: 100vh;
-        transform: translateX(600%);
-        transition: 0.6s;
-    }
-    .nav__burgerCheck:checked ~ .nav__burgerList {
-        transform: none;
-        transition: 0.6s;
-    }
-    .nav__burgerCheck:checked ~ .nav__burgerLine {
-        opacity: 1;
-        transform: rotate(-45deg) scale(1, 1) translate(-5px, 5px);
-        transition: 0.6s;
-    }
-    .nav__burgerCheck:checked ~ .nav__burgerLine:nth-child(2) {
-        transform: rotate(45deg) scale(1, 1) translate(1px, -1px);
-        transition: 0.6s;
-    }
-    .nav__burgerCheck:checked ~ .nav__burgerLine:nth-child(3) {
-        transform: rotate(0deg) scale(0.2, 0.2);
-        opacity: 0;
-        transition: 0.6s;
-    }
-    
-    
-}
+
 
